--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulario de Eventos</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <form id="eventForm">
-      <h1>Registro al Evento</h1>
-      <div id="error-message"></div>
-
-      <label for="name">Nombre completo:</label>
-      <input type="text" id="name" name="name" required />
-
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" name="email" required />
-
-      <label for="date">Fecha del evento:</label>
-      <input type="date" id="date" name="date" required />
-
-      <button type="submit">Enviar</button>
-    </form>
-
-    <script src="app.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Formulario de Eventos</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <form id="eventForm">
+    <h1>Registro al Evento</h1>
+    <label>Nombre completo:
+      <input type="text" id="name" required />
+    </label>
+    <label>Correo electrónico:
+      <input type="email" id="email" required />
+    </label>
+    <label>Número de tarjeta:
+      <input type="text" id="cardNumber" maxlength="16" required />
+    </label>
+    <label>Fecha de expiración:
+      <input type="month" id="expiry" required />
+    </label>
+    <label>CVC:
+      <input type="text" id="cvc" maxlength="3" required />
+    </label>
+    <button type="submit">Registrar</button>
+    <div id="errorMessage"></div>
+  </form>
+  <script src="app.js"></script>
+</body>
 </html>
