--- a/index.html
+++ b/index.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Formulario de Eventos</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <form id="eventForm">
-    <h1>Registro al Evento</h1>
-    <label>Nombre completo:
-      <input type="text" id="name" required />
-    </label>
-    <label>Correo electrónico:
-      <input type="email" id="email" required />
-    </label>
-    <label>Número de tarjeta:
-      <input type="text" id="cardNumber" maxlength="16" required />
-    </label>
-    <label>Fecha de expiración:
-      <input type="month" id="expiry" required />
-    </label>
-    <label>CVC:
-      <input type="text" id="cvc" maxlength="3" required />
-    </label>
-    <button type="submit">Registrar</button>
-    <div id="errorMessage"></div>
-  </form>
-  <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Secure payment</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="form-container">
+      <form id="eventForm" novalidate>
+        <h1><i class="fa-solid fa-calendar-check"></i> Registro al Evento</h1>
+
+        <label for="name"
+          ><i class="fa-solid fa-user"></i> Nombre completo:</label
+        >
+        <input type="text" id="name" required />
+
+        <label for="email"
+          ><i class="fa-solid fa-envelope"></i> Correo electrónico:</label
+        >
+        <input type="email" id="email" required />
+
+        <label for="date"
+          ><i class="fa-solid fa-calendar-days"></i> Fecha del evento:</label
+        >
+        <input type="date" id="date" required />
+
+        <button type="submit">
+          <i class="fa-solid fa-paper-plane"></i> Enviar
+        </button>
+
+        <p class="success-message" id="successMsg">✅ ¡Registro completado!</p>
+      </form>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
 </html>
+
