--- a/index.html
+++ b/index.html
@@ -3,42 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Secure payment</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
+    <title>Registro al Evento</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="form-container">
-      <form id="eventForm" novalidate>
-        <h1><i class="fa-solid fa-calendar-check"></i> Registro al Evento</h1>
+    <main class="container">
+      <form id="eventForm">
+        <h1><i class="fas fa-calendar-check"></i> Registro al Evento</h1>
 
-        <label for="name"
-          ><i class="fa-solid fa-user"></i> Nombre completo:</label
-        >
-        <input type="text" id="name" required />
+        <div class="form-group">
+          <label for="name">Nombre completo</label>
+          <input type="text" id="name" placeholder="Ej. Alejandra Bárcena" required />
+        </div>
 
-        <label for="email"
-          ><i class="fa-solid fa-envelope"></i> Correo electrónico:</label
-        >
-        <input type="email" id="email" required />
+        <div class="form-group">
+          <label for="email">Correo electrónico</label>
+          <input type="email" id="email" placeholder="Ej. ejemplo@mail.com" required />
+        </div>
 
-        <label for="date"
-          ><i class="fa-solid fa-calendar-days"></i> Fecha del evento:</label
-        >
-        <input type="date" id="date" required />
+        <div class="form-group">
+          <label for="card">Número de tarjeta</label>
+          <input type="text" id="card" maxlength="16" placeholder="1234 5678 9012 3456" required />
+        </div>
 
-        <button type="submit">
-          <i class="fa-solid fa-paper-plane"></i> Enviar
-        </button>
+        <div class="form-group">
+          <label for="cvc">CVC</label>
+          <input type="text" id="cvc" maxlength="3" placeholder="123" required />
+        </div>
 
-        <p class="success-message" id="successMsg">✅ ¡Registro completado!</p>
+        <div class="form-group">
+          <label for="date">Fecha</label>
+          <input type="date" id="date" required />
+        </div>
+
+        <button type="submit">Enviar <i class="fas fa-paper-plane"></i></button>
+        <p id="successMsg" class="hidden">✅ ¡Registro completado!</p>
       </form>
-    </div>
+    </main>
 
     <script src="app.js"></script>
   </body>
 </html>
-
